tests/__snapshots__/validation-describe-handles-expect-stderr.snap.txt
Error: 'expect()' cannot be nested within 'describe()'.

   6 | 
   7 | describe("nested 'expect()' is handled?", () => {
>  8 |   expect<never>().type.toBeNever();
     |   ^
   9 |   expect<null>().type.toBeNull();
  10 | 
  11 |   test("is number?", () => {

       at ./__typetests__/handles-expect.tst.ts:8:3

Error: 'expect()' cannot be nested within 'describe()'.

   7 | describe("nested 'expect()' is handled?", () => {
   8 |   expect<never>().type.toBeNever();
>  9 |   expect<null>().type.toBeNull();
     |   ^
  10 | 
  11 |   test("is number?", () => {
  12 |     expect<number>().type.toBeNumber();

       at ./__typetests__/handles-expect.tst.ts:9:3

